# nda_reviewer

./: README.md  pyproject.toml  report.md
src/nda_reviewer/: crew.py  main.py
src/nda_reviewer/config/: agents.yaml  tasks.yaml
src/nda_reviewer/tools/: custom_tool.py
