[project]
name = "nda_reviewer"
version = "0.1.0"
description = "nda_reviewer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
nda_reviewer = "nda_reviewer.main:run"
run_crew = "nda_reviewer.main:run"
train = "nda_reviewer.main:train"
replay = "nda_reviewer.main:replay"
test = "nda_reviewer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
